[gd_scene load_steps=9 format=3 uid="uid://db63n0fuhkjxk"]

[ext_resource type="Script" path="res://scripts/magic_bullet.gd" id="1_74j8q"]
[ext_resource type="Texture2D" uid="uid://dxhj3m4i2fv6d" path="res://sprites/Flame/Flame_1.png" id="2_p6pb7"]
[ext_resource type="Texture2D" uid="uid://bpkf22jlpy65q" path="res://sprites/Flame/Flame_2.png" id="3_pbhke"]
[ext_resource type="Texture2D" uid="uid://b5krppyslbqes" path="res://sprites/Flame/Flame_3.png" id="4_6ko7m"]
[ext_resource type="Texture2D" uid="uid://c68augrcuq3mx" path="res://sprites/Flame/Flame_4.png" id="5_a7ceo"]
[ext_resource type="AudioStream" uid="uid://16kg27c6tnh2" path="res://Pandora Jam assets/SOUNDS - MUSIC (File responses)/Jimauve_Attack2 - guillaume Jimauve.mp3" id="7_7h20k"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fjqix"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_p6pb7")
}, {
"duration": 1.0,
"texture": ExtResource("3_pbhke")
}, {
"duration": 1.0,
"texture": ExtResource("4_6ko7m")
}, {
"duration": 1.0,
"texture": ExtResource("5_a7ceo")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3g3tu"]
radius = 5.0

[node name="MagicBullet" type="Node2D"]
script = ExtResource("1_74j8q")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-3, 1)
rotation = -1.5708
scale = Vector2(0.673, 0.688)
sprite_frames = SubResource("SpriteFrames_fjqix")
frame_progress = 0.145732

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_7h20k")
autoplay = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(4, 1)
shape = SubResource("CircleShape2D_3g3tu")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
